--- a/exercises/manifests/namespace.yaml
+++ b/exercises/manifests/namespace.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  creationTimestamp: null
+  name: demo2
   labels:
     tier: test
-  name: demo
+spec: {}
+status: {}
