--- a/exercises/manifests/service.yaml
+++ b/exercises/manifests/service.yaml
@@ -1,17 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
+  creationTimestamp: null
   labels:
     app: nginx
     tag: alpine
   name: nginx-alpine
-  namespace: demo
+  namespace: demo2
 spec:
   ports:
   - port: 8111
     protocol: TCP
-    targetPort: 8111
+    targetPort: 80
   selector:
     app: nginx
     tag: alpine
   type: ClusterIP
+status:
+  loadBalancer: {}
