--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -43,8 +43,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: project/
-          file: ./techtrends/Dockerfile
+          context: project
+          file: techtrends/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ldfandian/techtrends:latest
