add screenshot & reduce unused docker build/push

--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -10,7 +10,7 @@ on:
     branches:
       - 'main'
     paths:
-      - 'project/**'
+      - 'project/techtrends/**'
       - '.github/workflows/techtrends*'
 
 ## List the steps to be executed by the workflow
