--- a/project/helm/templates/deploy.yaml
+++ b/project/helm/templates/deploy.yaml
@@ -27,7 +27,7 @@ spec:
         readinessProbe:
           httpGet:
             path: {{ .Values.readinessProbe.path }}
-            port: {{ .Values.readinessProbe.path }}
+            port: {{ .Values.readinessProbe.port }}
         livenessProbe:
           httpGet:
             path: {{ .Values.livenessProbe.path }}
